<resources>
    <string name="app_name">SafeConstruction</string>
    <string name="loading">加载中。。。</string>
    <string name="version">v%1$s</string>
    <string name="login_title">平安施工&#160;智慧工程</string>
    <string name="login">登录</string>
    <string name="login_hint">请输入手机号或用户名</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="home">首页</string>
    <string name="mine">个人中心</string>
    <string name="take_photos_of_dangers">隐患随手拍</string>
    <string name="rectification_and_reply">整改与回复</string>
    <string name="group_education">班组教育</string>
    <string name="routine_inspection">巡查记录</string>
    <string name="video_surveillance">视频监控</string>
    <string name="attendance_management">考勤管理</string>
    <string name="modify_pwd">修改密码</string>
    <string name="update_version">版本更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="scan">扫一扫</string>
    <string name="clock_in">打卡</string>
    <string name="my_application">我的应用</string>
    <string name="platform_name">智慧工程云平台</string>
    <string name="to_be_received">待接收(%1$s)</string>
    <string name="to_be_processed">待处理(%1$s)</string>
    <string name="processed">已处理(%1$s)</string>
    <string name="problem_description">问题描述: &#160;&#160; %1$s</string>
    <string name="commit_name">提交人: &#160;&#160; %1$s</string>
    <string name="problem_title">问题说明</string>
    <string name="department">部门</string>
    <string name="team">班组</string>
    <string name="tel">电话</string>
    <string name="check_item">检查项</string>
    <string name="reference_clause">涉及条款</string>
    <string name="receive_problem">问题接收</string>
    <string name="receive_or_not">是否接收</string>
    <string name="receive_remark">接收备注</string>
    <string name="to_be_rectified">待整改(%1$s)</string>
    <string name="to_be_examine">待审核(%1$s)</string>
    <string name="completed">已完成</string>
    <string name="to_be_rectified2">待整改</string>
    <string name="to_be_examine2">待审核</string>
    <string name="warning">隐患问题已超期，请及时处理</string>
    <string name="question_operator">问题操作</string>
    <string name="check_sort">检查分类</string>
    <string name="rectification_period">整改期限</string>
    <string name="rectification_person">整改责任人</string>
    <string name="rectification_requirement">整改要求</string>
    <string name="reason_analyze">原因分析</string>
    <string name="rectification_condition">整改情况</string>
    <string name="subsequent_measurese">后期措施</string>
    <string name="audit">审核情况</string>
    <string name="audit_result">审核结果</string>
    <string name="status">状态：当前问题正在修改</string>
    <string name="fines_detail">罚款详情</string>
    <string name="add_fines">添加罚款</string>
    <string name="price">共%1$s元</string>
    <string name="fines_list">罚款列表</string>
    <string name="fines_detail2">罚款\n详情</string>
    <string name="detail">详情</string>
    <string name="new_fines">新增罚款</string>
    <string name="group_education_tip">
        1.班前交底会语言采用普通话，时长不低于120s。\n
        2.班组人员规范系带安全帽，穿反光衣，队列整齐，班组长必须检查组员劳保用品穿戴情况。\n
        3.班组长点名问好，用扩音喇叭，队员喊到名字答“到”,声音清晰洪亮。\n
        4.全体进行安全口号宣誓，誓言内容：“不安全不生产、不交底不上岗、不检查不施工、无防护不干活”（必须）等。</string>
    <string name="monitor_save_video">录像</string>
    <string name="monitor_save_videoing">录像中</string>
    <string name="monitor_start_record_success">已开启录像</string>
    <string name="monitor_start_record_fail">开启录像失败</string>
    <string name="monitor_save_record_success">录像已保存至相相册</string>

</resources>