<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/c_2B88CF"/>

    <TextView
        android:id="@+id/tv_version"
        style="@style/CommonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/view_bg"
        app:layout_constraintTop_toTopOf="@id/view_bg"
        android:layout_marginTop="@dimen/vertical_margin_8"
        android:layout_marginEnd="@dimen/horizontal_margin_8"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/c_fff"
        android:text="v4.9.51" />
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/tv_version"
        app:layout_constraintStart_toStartOf="@id/view_bg"
        app:layout_constraintEnd_toEndOf="@id/view_bg"
        android:layout_marginTop="@dimen/vertical_margin_30"
        android:src="@drawable/login_logo_icon"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/CommonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/view_bg"
        app:layout_constraintEnd_toEndOf="@id/view_bg"
        android:layout_marginTop="@dimen/vertical_margin_12"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c_fff"
        android:text="@string/login_title"/>

    <View
        android:id="@+id/view_name_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/view_bg"
        app:layout_constraintEnd_toEndOf="@id/view_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="@dimen/vertical_margin_24"
        android:layout_marginStart="@dimen/horizontal_margin_36"
        android:layout_marginEnd="@dimen/horizontal_margin_36" />

    <ImageView
        android:id="@+id/iv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view_name_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_name_bg"
        app:layout_constraintStart_toStartOf="@id/view_name_bg"
        android:src="@drawable/name_icon"/>
    <EditText
        android:id="@+id/et_name"
        style="@style/CommonEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/login_hint"
        android:textColorHint="@color/c_fff"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c_fff"
        app:layout_constraintTop_toTopOf="@id/view_name_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_name_bg"
        app:layout_constraintStart_toEndOf="@id/iv_name"
        app:layout_constraintEnd_toEndOf="@id/view_name_bg"
        android:layout_marginStart="@dimen/horizontal_margin_8"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="@id/view_name_bg"
        app:layout_constraintEnd_toEndOf="@id/view_pwd_bg"
        app:layout_constraintTop_toBottomOf="@id/view_name_bg"
        android:background="@color/c_fff" />

    <View
        android:id="@+id/view_pwd_bg"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/view_bg"
        app:layout_constraintEnd_toEndOf="@id/view_bg"
        app:layout_constraintTop_toBottomOf="@id/view_name_bg"
        android:layout_marginTop="@dimen/vertical_margin_8"
        android:layout_marginStart="@dimen/horizontal_margin_36"
        android:layout_marginEnd="@dimen/horizontal_margin_36" />

    <ImageView
        android:id="@+id/iv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/view_pwd_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_pwd_bg"
        app:layout_constraintStart_toStartOf="@id/view_pwd_bg"
        android:src="@drawable/password_icon"/>
    <EditText
        android:id="@+id/et_pwd"
        style="@style/CommonEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/c_fff"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/c_fff"
        app:layout_constraintTop_toTopOf="@id/view_pwd_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_pwd_bg"
        app:layout_constraintStart_toEndOf="@id/iv_pwd"
        app:layout_constraintEnd_toEndOf="@id/view_pwd_bg"
        android:layout_marginStart="@dimen/horizontal_margin_8"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="@id/view_pwd_bg"
        app:layout_constraintEnd_toEndOf="@id/view_pwd_bg"
        app:layout_constraintTop_toBottomOf="@id/view_pwd_bg"
        android:background="@color/c_fff" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/view_bg"
        app:layout_constraintEnd_toEndOf="@id/view_bg"
        app:layout_constraintTop_toBottomOf="@id/view_pwd_bg"
        android:layout_marginTop="@dimen/vertical_margin_36"
        android:layout_marginStart="@dimen/horizontal_margin_36"
        android:layout_marginEnd="@dimen/horizontal_margin_36"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/main_color"
        android:text="@string/login"
        android:background="@drawable/common_8_fff_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>
