<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_12"
        android:layout_marginStart="@dimen/horizontal_margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/c_000"
        android:textSize="@dimen/sp_16"
        android:text="双宁安全管控平台                                                          " />

    <TextView
        android:id="@+id/tv_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_16"
        android:layout_marginEnd="@dimen/horizontal_margin_16"
        android:layout_marginTop="@dimen/vertical_margin_24"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="@dimen/horizontal_margin_8"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_555" />

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="@dimen/horizontal_margin_16"
        android:layout_marginEnd="@dimen/horizontal_margin_16"
        android:layout_marginTop="@dimen/vertical_margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_project"
        app:banner_radius="16dp"
        app:banner_indicator_gravity="right"
        app:banner_indicator_marginBottom="12dp"
        app:banner_indicator_marginRight="30dp"
        app:banner_indicator_selected_color="@color/main_color"
        app:banner_indicator_normal_width="@dimen/horizontal_margin_8"
        app:banner_indicator_selected_width="@dimen/horizontal_margin_8"/>

    <View
        android:id="@+id/view_left"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/vertical_margin_20"
        app:layout_constraintEnd_toStartOf="@id/view_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintHorizontal_weight="1"/>
    <View
        android:id="@+id/view_right"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/vertical_margin_20"
        app:layout_constraintStart_toEndOf="@id/view_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintHorizontal_weight="1"/>
    <ImageView
        android:id="@+id/iv_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view_left"
        app:layout_constraintEnd_toEndOf="@id/view_left"
        app:layout_constraintTop_toTopOf="@id/view_left"
        android:src="@drawable/scan_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/view_left"
        app:layout_constraintEnd_toEndOf="@id/view_left"
        app:layout_constraintTop_toBottomOf="@id/iv_left"
        android:layout_marginTop="@dimen/vertical_margin_8"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_222"
        android:text="@string/scan"/>
    <ImageView
        android:id="@+id/iv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view_right"
        app:layout_constraintEnd_toEndOf="@id/view_right"
        app:layout_constraintTop_toTopOf="@id/view_right"
        android:src="@drawable/clock_in_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/view_right"
        app:layout_constraintEnd_toEndOf="@id/view_right"
        app:layout_constraintTop_toBottomOf="@id/iv_right"
        android:layout_marginTop="@dimen/vertical_margin_8"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/c_222"
        android:layout_gravity="center_horizontal"
        android:text="@string/clock_in"/>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_12"
        android:layout_marginStart="@dimen/horizontal_margin_16"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/c_000"
        android:textSize="@dimen/sp_16"
        android:text="@string/my_application"/>
</androidx.constraintlayout.widget.ConstraintLayout>
